[gd_scene load_steps=4 format=3 uid="uid://dyiveyiwynurb"]

[ext_resource type="Texture2D" uid="uid://c63ai4f4lswbf" path="res://ui/theme/res/horizontal_logo.png" id="1_5df70"]
[ext_resource type="Script" uid="uid://c1giws8uwqx1o" path="res://scenes/title_screen/title_screen.gd" id="1_ri6bm"]
[ext_resource type="Texture2D" uid="uid://b0mx4qepjjvn" path="res://globals/global/res/heart.png" id="2_vuv2h"]

[node name="TitleScreen" type="Node2D"]
script = ExtResource("1_ri6bm")

[node name="HorizontalLogo" type="Sprite2D" parent="."]
position = Vector2(320, 161)
scale = Vector2(0.75, 0.75)
texture = ExtResource("1_5df70")

[node name="Play" type="Button" parent="."]
custom_minimum_size = Vector2(128, 0)
offset_left = 256.0
offset_top = 247.0
offset_right = 384.0
offset_bottom = 295.0
focus_neighbor_top = NodePath("../Quit")
focus_neighbor_bottom = NodePath("../Quit")
mouse_filter = 2
theme_override_font_sizes/font_size = 48
text = "PLAY"

[node name="Quit" type="Button" parent="."]
custom_minimum_size = Vector2(128, 0)
offset_left = 256.0
offset_top = 313.0
offset_right = 384.0
offset_bottom = 361.0
focus_neighbor_top = NodePath("../Play")
focus_neighbor_bottom = NodePath("../Play")
mouse_filter = 2
theme_override_font_sizes/font_size = 48
text = "QUIT"

[node name="Heart" type="Sprite2D" parent="."]
position = Vector2(241, 272)
scale = Vector2(2, 2)
texture = ExtResource("2_vuv2h")

[connection signal="focus_entered" from="Play" to="." method="_on_play_focus_entered"]
[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
[connection signal="focus_entered" from="Quit" to="." method="_on_quit_focus_entered"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
